--- a/src/views/paginas/index.ejs
+++ b/src/views/paginas/index.ejs
@@ -93,7 +93,7 @@
             <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcScvytNgxpE2-uUq3TO9hvOxbTm-tLCp1NVvg&usqp=CAU" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Confortavel</h4>
+            <h4>Confortável</h4>
             <p class="text-muted">Conforto para o doador e quem receber.</p>
           </div>
         </div>
@@ -124,7 +124,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Acessibilidade</h4>
-            <p class="text-muted">aplicação acessivel para todos os públicos.</p>
+            <p class="text-muted">Aplicação acessível para todos os públicos.</p>
           </div>
         </div>
 
@@ -138,8 +138,8 @@
             <img class="img-fluid" src="https://agenciaorin.com.br/wp-content/uploads/2019/05/como-criar-uma-presenca-digital-eficiente-site.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>eficiência</h4>
-            <p class="text-muted">eficiente de processo do app.</p>
+            <h4>Eficiência</h4>
+            <p class="text-muted">Eficiente no processo do app.</p>
           </div>
         </div>
       </div>
@@ -167,8 +167,8 @@
                   <h4 class="subheading">Planejamento</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">nessa etapa estaremos realizando constantes reuniões que traram a compreenção do projeto para a equipe.
-                    diagramas, protótipos, documentos serão feitos nesse processo, trazendo um padrão de projeto para a equipe.
+                  <p class="text-muted">Nessa etapa, estaremos realizando constantes reuniões que trarão a compreensão do projeto para a equipe.
+                    Diagramas, protótipos, documentos serão feitos nesse processo, trazendo um padrão de projeto para a equipe.
                   </p>
                 </div>
               </div>
@@ -183,7 +183,7 @@
                   <h4 class="subheading">Design UI e UX do projeto</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">O design é muito importante para o projeto visto que trara um ambiente mais confortavel, simples e intuitivo para o produto.</p>
+                  <p class="text-muted">O design é muito importante para o projeto, visto que, trará um ambiente mais confortável, simples e intuitivo para o produto.</p>
                 </div>
               </div>
             </li>
@@ -197,8 +197,8 @@
                   <h4 class="subheading">Desenvolver</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">O produto começa a a ser criado apartir dessa etapa, onde usaremos metodologias de desenvolvimento
-                    agil para o melhor fluxo do projetos.</p>
+                  <p class="text-muted">O produto começa a ser criado apartir desta etapa, onde usaremos metodologias de desenvolvimento
+                    ágil para o melhor fluxo do projeto.</p>
                 </div>
               </div>
             </li>
@@ -212,7 +212,7 @@
                   <h4 class="subheading">Teste e entrega</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Será realizado um série de teste, para encontrar possiveis erros, que podem atrapalhar o uso do cliente, e corrigir e por fim a entrega.</p>
+                  <p class="text-muted">Será realizado uma série de teste, para encontrar possíveis erros que podem atrapalhar o uso do cliente, e corrigir por fim a entrega.</p>
                 </div>
               </div>
             </li>
@@ -242,7 +242,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="/public/imagens/integrantes/carla.jpeg" alt="">
             <h4>Carla Beatriz</h4>
-            <p class="text-muted">Programadora</p>
+            <p class="text-muted">Designer e Analista</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -271,7 +271,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="/public/imagens/integrantes/elias.jpeg" alt="">
             <h4>José Elias</h4>
-            <p class="text-muted">Designer</p>
+            <p class="text-muted">Programador</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
